plugins {
    id 'java'
    id 'application'
    id 'me.champeau.jmh' version '0.7.3'
}

group = 'dev.tlang'

repositories {
    mavenCentral()
}

sourceSets {
    benchmarkSupport {
        java.srcDir 'src/benchmark/java'
        resources.srcDir 'src/benchmark/resources'
        compileClasspath += sourceSets.main.output + configurations.runtimeClasspath
        runtimeClasspath += output + compileClasspath
    }
    test {
        compileClasspath += sourceSets.benchmarkSupport.output
        runtimeClasspath += sourceSets.benchmarkSupport.output
    }
}

dependencies {
    implementation 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.23.0'
    implementation 'org.xerial:sqlite-jdbc:3.53.2.1'
    implementation 'com.sun.mail:javax.mail:1.6.2'
    implementation 'javax.activation:activation:1.1.1'

    testImplementation platform('org.junit:junit-bom:5.10.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    jmhImplementation sourceSets.main.output
    jmhImplementation sourceSets.benchmarkSupport.output
}

test {
    useJUnitPlatform()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

jmh {
    jmhVersion = '1.37'
    warmupIterations = 3
    iterations = 5
    fork = 1
    failOnError = true
    includeTests = false
    warmup = '1s'
    timeOnIteration = '1s'
    resultFormat = 'JSON'
    resultsFile = project.file("${layout.buildDirectory.get().asFile}/reports/jmh/results.json")
}

def benchmarkSmokeResult = layout.buildDirectory.file('reports/jmh/smoke-results.json')

tasks.register('benchmarkSmoke', JavaExec) {
    dependsOn 'jmhJar'
    group = 'verification'
    description = 'Runs every JMH benchmark with a minimal correctness-oriented configuration.'
    classpath = files(tasks.named('jmhJar').flatMap { it.archiveFile })
    mainClass = 'dev.tlang.benchmark.BenchmarkSmokeRunner'
    args benchmarkSmokeResult.get().asFile.absolutePath
}

tasks.register('benchmarkMetadata') {
    group = 'benchmark'
    description = 'Writes machine-readable environment metadata beside JMH results.'
    def outputFile = layout.buildDirectory.file('reports/jmh/environment.json')
    outputs.file(outputFile)
    doLast {
        def sha = System.getenv('GITHUB_SHA') ?: 'unknown'
        try {
            def process = new ProcessBuilder('git', 'rev-parse', 'HEAD')
                .directory(rootDir).redirectErrorStream(true).start()
            def candidate = process.inputStream.text.trim()
            if (process.waitFor() == 0 && candidate) {
                sha = candidate
            }
        } catch (Exception ignored) {
            // A source archive may not contain Git metadata.
        }
        def metadata = [
            tlangVersion: project.version.toString(),
            gitCommit: sha,
            javaVersion: System.getProperty('java.version'),
            javaVm: System.getProperty('java.vm.name'),
            operatingSystem: System.getProperty('os.name'),
            architecture: System.getProperty('os.arch'),
            jmhVersion: '1.37',
            warmupIterations: 3,
            measurementIterations: 5,
            forks: 1,
            timePerIteration: '1s',
            fullResultFile: 'results.json',
            smokeResultFile: 'smoke-results.json',
            smokeConfiguration: 'no warmup, one 5ms measurement, no fork; validation only'
        ]
        def file = outputFile.get().asFile
        file.parentFile.mkdirs()
        file.text = groovy.json.JsonOutput.prettyPrint(groovy.json.JsonOutput.toJson(metadata)) + System.lineSeparator()
    }
}

tasks.named('jmh') {
    doFirst {
        layout.buildDirectory.dir('reports/jmh').get().asFile.mkdirs()
    }
    finalizedBy 'benchmarkMetadata'
}

tasks.named('benchmarkSmoke') {
    finalizedBy 'benchmarkMetadata'
}

application {
    mainClass = 'dev.tlang.Main'
    applicationName = 'tlang'
}

processResources {
    inputs.property "version", project.version
    filesMatching("version.properties") {
        expand "version": project.version
    }
}

def semanticVersion = ~/^\d+\.\d+\.\d+(?:-[0-9A-Za-z.-]+)?(?:\+[0-9A-Za-z.-]+)?$/
tasks.register('verifyVersion') {
    group = 'verification'
    description = 'Validates the project version and an optional release tag.'
    doLast {
        def currentVersion = project.version.toString()
        if (!currentVersion || !(currentVersion ==~ semanticVersion)) {
            throw new GradleException("Version must be a semantic version without a leading 'v': ${currentVersion}")
        }
        def releaseTag = System.getenv('RELEASE_TAG')
        if (releaseTag) {
            if (!releaseTag.matches(/^v\d+\.\d+\.\d+(?:-[0-9A-Za-z.-]+)?(?:\+[0-9A-Za-z.-]+)?$/)) {
                throw new GradleException("Release tag must be v<semantic-version>: ${releaseTag}")
            }
            if (currentVersion.endsWith('-SNAPSHOT')) {
                throw new GradleException('Snapshot versions cannot be released.')
            }
            if (releaseTag.substring(1) != currentVersion) {
                throw new GradleException("Release tag ${releaseTag} does not match project version ${currentVersion}.")
            }
        }
    }
}

// Custom task to copy runtime dependencies to build/dependencies
tasks.register('copyDependencies', Copy) {
    from configurations.runtimeClasspath
    into layout.buildDirectory.dir('dependencies')
}

// Custom task to run our custom .tiny integration tests
tasks.register('tlangTests', Exec) {
    dependsOn compileJava
    dependsOn 'copyDependencies'
    group = 'verification'
    description = 'Runs the custom TLang integration tests'
    
    environment 'GRADLE_RUNNING', 'true'
    commandLine 'bash', './scripts/run_all_tests.sh'
}

// Bind tlangTests to standard check task
tasks.named('check') {
    dependsOn tlangTests, 'verifyVersion'
}

tasks.register('distributionSmokeTest', Exec) {
    dependsOn 'installDist'
    group = 'verification'
    description = 'Exercises the installed distribution, including a path containing spaces.'
    commandLine 'bash', './scripts/release_smoke_test.sh'
}

tasks.register('verifyDocs', Exec) {
    group = 'verification'
    description = 'Validates local Markdown links.'
    commandLine 'bash', './scripts/verify_docs.sh'
}

tasks.register('verifyDocsTest', Exec) {
    group = 'verification'
    description = 'Tests documentation validation rejection and acceptance cases.'
    commandLine 'bash', './scripts/test_verify_docs.sh'
}

tasks.register('versionValidationTest', Exec) {
    group = 'verification'
    description = 'Exercises the production Gradle version validation task.'
    commandLine 'bash', './scripts/test_version_validation.sh'
}

tasks.named('check') {
    dependsOn 'verifyDocs', 'verifyDocsTest', 'versionValidationTest'
}

// jpackage task integration for native installers
def jpackageVersion = project.version.toString().split('-')[0]
def requireReleaseVersion = {
    if (project.version.toString().endsWith('-SNAPSHOT')) {
        throw new GradleException('Native installers require a non-snapshot release version.')
    }
}

tasks.register('jpackageLinux', Exec) {
    dependsOn 'installDist'
    group = 'distribution'
    description = 'Builds the Linux .deb installer package'
    
    onlyIf {
        org.gradle.internal.os.OperatingSystem.current().isLinux()
    }
    
    doFirst {
        requireReleaseVersion()
        mkdir "${layout.buildDirectory.get().asFile}/jpackage"
    }

    commandLine 'jpackage',
        '--verbose',
        '--type', 'deb',
        '--name', 'tlang',
        '--app-version', jpackageVersion,
        '--input', "${layout.buildDirectory.get().asFile}/install/tlang/lib",
        '--main-jar', tasks.named('jar').get().archiveFileName.get(),
        '--main-class', 'dev.tlang.Main',
        '--dest', "${layout.buildDirectory.get().asFile}/jpackage",
        '--resource-dir', 'packaging/linux',
        '--vendor', 'TLang',
        '--description', 'TLang Programming Language'
}

tasks.register('jpackageMac', Exec) {
    dependsOn 'installDist'
    group = 'distribution'
    description = 'Builds the macOS .pkg installer package'
    
    onlyIf {
        org.gradle.internal.os.OperatingSystem.current().isMacOsX()
    }
    
    doFirst {
        requireReleaseVersion()
        mkdir "${layout.buildDirectory.get().asFile}/jpackage"
    }

    commandLine 'jpackage',
        '--verbose',
        '--type', 'pkg',
        '--name', 'TLang',
        '--app-version', jpackageVersion,
        '--input', "${layout.buildDirectory.get().asFile}/install/tlang/lib",
        '--main-jar', tasks.named('jar').get().archiveFileName.get(),
        '--main-class', 'dev.tlang.Main',
        '--dest', "${layout.buildDirectory.get().asFile}/jpackage",
        '--resource-dir', 'packaging/macos',
        '--vendor', 'TLang',
        '--description', 'TLang Programming Language'
}

tasks.register('jpackageWindows', Exec) {
    dependsOn 'installDist'
    group = 'distribution'
    description = 'Builds the Windows .msi installer package'
    
    onlyIf {
        org.gradle.internal.os.OperatingSystem.current().isWindows()
    }
    
    doFirst {
        requireReleaseVersion()
        mkdir "${layout.buildDirectory.get().asFile}/jpackage"
    }

    commandLine 'jpackage',
        '--verbose',
        '--type', 'msi',
        '--name', 'TLang',
        '--app-version', jpackageVersion,
        '--input', "${layout.buildDirectory.get().asFile}/install/tlang/lib",
        '--main-jar', tasks.named('jar').get().archiveFileName.get(),
        '--main-class', 'dev.tlang.Main',
        '--dest', "${layout.buildDirectory.get().asFile}/jpackage",
        '--resource-dir', 'packaging/windows',
        '--vendor', 'TLang',
        '--description', 'TLang Programming Language'
}

tasks.register('jpackage') {
    group = 'distribution'
    description = 'Builds the native installer for the current platform'
    
    if (org.gradle.internal.os.OperatingSystem.current().isLinux()) {
        dependsOn 'jpackageLinux'
    } else if (org.gradle.internal.os.OperatingSystem.current().isMacOsX()) {
        dependsOn 'jpackageMac'
    } else if (org.gradle.internal.os.OperatingSystem.current().isWindows()) {
        dependsOn 'jpackageWindows'
    }
}
